--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,6 +350,10 @@ section {
   margin-bottom: 0;
 }
 
+.about .img-fluid{
+  border-radius:10px;
+}
+
 /*--------------------------------------------------------------
 # Facts
 --------------------------------------------------------------*/
